# Compliance-AI-Agent-

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Procfile  README.md  constraints.txt  pyproject.toml  render.yaml
.github/workflows/: ci.yml  weekly-digest.yml
docs/: WORKFLOW.md  regulatory-obligations-spec.md
examples/: sample_policy.txt  sample_policy_v4.txt
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AddRegulationModal.tsx  AddRuleFromTextDialog.tsx  AppShell.tsx  AskAspora.tsx  AssigneeChip.tsx  CountrySelect.tsx  DateField.tsx  DaysRemainingCounter.tsx  DocumentExtractDialog.tsx  DocumentList.tsx  DueDateRuleBuilder.tsx  EffortBandBadge.tsx  EmptyState.tsx  ExportMenu.tsx  FiscalYearEndPicker.tsx  ImportBankAccountsModal.tsx  ImportRulesDialog.tsx  InlineStatusMenu.tsx  JurisdictionBadge.tsx  LibraryLayout.tsx  Markdown.tsx  MentionTextarea.tsx  ObligationDetail.tsx  ObligationDrawer.tsx  PageHeader.tsx  ProtectedRoute.tsx  RuleChangeCheckDialog.tsx  SecondOpinionPanel.tsx  Sidebar.tsx  StatusPill.tsx  Topbar.tsx  (+1 more)
src/compliance_agent/: __init__.py  activity_gate.py  calendar_service.py  catalog.py  classification.py  cli.py  clickup_service.py  condition_engine.py  diff.py  digest.py  due_date_spec.py  email_service.py  email_templates.py  extractor.py  mock.py  models.py  rate_limit.py  regulation_feeds.py  reminders.py  report.py  rule_extractor.py  rule_normalize.py  slack_service.py  storage.py  verifier.py  web.py
tests/: test_condition_engine.py  test_owner_team.py  test_rule_normalize.py
(+109 files in other folders)
