[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-agent"
version = "0.2.0"
description = "AI agent that extracts structured compliance requirements from policy and regulation documents, with a country-picker web UI."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.92.0",
    "pydantic>=2.6",
    "pydantic[email]>=2.6",
    "pypdf>=4.0",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "slowapi>=0.1.9",
]

# Optional drivers for Phase 8 production-hardening installs:
#   pip install -e ".[postgres]"   — psycopg2 for postgresql:// URLs
[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]

[project.scripts]
compliance-agent = "compliance_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"compliance_agent" = ["data/regulations/**/*.txt", "data/static/**/*"]
